Misc alignments, fixed starting jump, nav in

--- a/src/styles/styles.sass
+++ b/src/styles/styles.sass
@@ -28,25 +28,28 @@ $boundary: 90.2%
 @mixin defaultTransition
 	transition: all .29s ease-in-out
 
+@mixin whipTransition
+	transition: cubic-bezier(.76,.03,.35,.99) .25s all
+
 @mixin maxWidthXS
 	width: $boundary
-	max-width: 320px
+	max-width: 350px
 
 @mixin maxWidthS
 	width: $boundary
-	max-width: 500px
+	max-width: 550px
 
 @mixin maxWidthM
 	width: $boundary
-	max-width: 750px
+	max-width: 850px
 
 @mixin maxWidthL
 	width: $boundary
-	max-width: 1050px	
+	max-width: 1250px	
 
 @mixin maxWidthXL
 	width: $boundary
-	max-width: 1350px	
+	max-width: 1750px	
 
 *
 	--color-blue: #001F4E
@@ -55,7 +58,7 @@ $boundary: 90.2%
 	--color-gry: #EEEEEE
 	--color-teal:#13f1df
 	--color-white: white
-	--shadow-color: #77B4E7
+	--shadow-color:#3171a5
 	box-sizing: border-box
 	
 html, body
@@ -70,13 +73,16 @@ html, body
 h1, h2, h3, h4, h5, h6, p, ul, li, a
 	margin: 0
 	padding: 0
+
+h1 > div, h2 > div, h3 > div, h4 > div, h5 > div, h6 > div, p > div
+	will-change: transform, opacity, position, color, visibility
 	
-a:visited
-	color: var(--color-white)
+a:visited, a.externalLink:visited
+	color: var(--color-white) !important
 	opacity: .4 !important
 
 h1
-	font-size: clamp(2.7em, calc(2.7rem + (16.8 - 2.7) * ((100vw - 48em) / (120 - 48))), 16.8em)
+	font-size: clamp(3.2em, calc(3.2rem + (21.8 - 3.2) * ((100vw - 48em) / (120 - 48))), 21.8em)
 	font-family: telegraf
 	font-style: normal
 	line-height: 1.02
@@ -92,7 +98,7 @@ h2
 	@include fontIvyNormal
 	font-size: clamp(2.9em, calc(2.9rem + (6.5 - 2.9) * ((100vw - 48rem) / (120 - 48))), 6.5em)
 	line-height: 1.23
-	letter-spacing: 0
+	letter-spacing: .02em
 	margin-bottom: 0.25em
 
 	em
@@ -112,13 +118,13 @@ h3
 h4
 	@include fontTel
 	text-transform: uppercase
-	font-size: clamp(1.4em, calc(1.4rem + (1.8 - 1.4) * ((100vw - 48em) / (120 - 48))), 1.8em)
+	font-size: clamp(1.17em, calc(1.2rem + (1.9 - 1.17) * ((100vw - 48em) / (120 - 48))), 1.9em)
 	line-height: 1.57
 	font-weight: 400
 	// opacity: .5
 	color: var(--color-yellow)
 	letter-spacing: .3em
-	margin-bottom: .25em
+	margin-bottom: .5em
 
 .interstitial 
 	display: flex !important
@@ -135,15 +141,21 @@ h3
 	@include fontIvyNormal
 
 p, ul, li, a, ol
-	font-size: clamp(1.33em, calc(1.33rem + (2.55 - 1.33) * ((100vw - 48em) / (120 - 48))), 2.55em)
+	font-size: clamp(1.33em, calc(1.33rem + (2.85 - 1.33) * ((100vw - 48em) / (120 - 48))), 2.85em)
 	@include fontTel
 	letter-spacing: 0.005em
+	text-rendering: optimizeLegibility
 	font-weight: 100
-	line-height: 1.52em
+	line-height: 1.52
+
+cite > a, a.externalLink
+	margin-top: 1.25em
+	border-bottom: 1px solid white
+	display: inline-block
 
 a
 	@include fontIvyNormal
-	margin-top: .5em !important
+	// margin-top: .5em !important
 	display: block
 	font-size: 1.3rem
 	text-transform: uppercase
@@ -183,20 +195,53 @@ button
 		
 nav
 	position: fixed
-	right: 0
-	top: 50%
-	background: #000
-	height: 50px
-	width: 100px
+	right: 3rem
+	display: none
+	height: 100%
+	flex-direction: column
+	justify-content: center
+	// padding-bottom: 4%
+	z-index: 35
+
+	a
+		display: flex
+		flex-direction: row-reverse
+		align-items: center
+		margin-top: 1.5rem
+		
+		p
+			font-size: inherit
+			font-family: inherit
+			font-weight: inherit
+			font-style: inherit
+			margin-right: 1em
+			color: white
+
+		div.navMarker
+			display: block
+			width: 8px
+			margin-left: 1.25rem
+			border-radius: 16px
+			height: 8px
+			background: var(--color-teal)
+			box-shadow: 0px 0px 9px var(--shadow-color)
+			
+// Nav jump Links
+.jumpTo
+	// background: red
+	width: 1px
+	position: absolute
+	top: -25%
+	visibility: hidden
+
+#introPanel .jumpTo
+	top: -100%
 
 main
 	margin: auto
 
 section:not(section.interstitial)
-	// display: flex
-	// justify-content: center
 	height: 100vh
-	// align-items: center
 
 	&.lefty
 		justify-content: flex-start
@@ -205,9 +250,10 @@ section#introPanel
 	display: flex
 	justify-content: center
 	align-items: center
-	padding-top: 15%
+	padding-top: 17vh
 
 	#introHeadingContainer
+		transform: translateX(calc(-26% /4))
 
 		h1, h1> em
 			margin: 0
@@ -229,7 +275,7 @@ section#introPanel
 
 			p
 				max-width: 250px
-				margin-top: 4em
+				margin-top: 3em
 
 @keyframes grain
   0%, 100%
@@ -327,7 +373,7 @@ section#soundAsk
 		margin-top: 2rem
 		display: flex
 		justify-content: center
-		transform:  translateZ(90px)
+		transform: translateZ(90px)
 		column-gap: 5em
 
 	h2
@@ -341,64 +387,66 @@ section#soundAsk
 	position: relative
 	display: block
 	width: 100%
-	@include maxWidthL
+	@include maxWidthXL
 	margin: 0 auto
-	height: 100vh
 
 .fullWidthPanel
 	max-width: initial
-	width: 100%
+	width: 100vw
 
 .panelInnerLeft
 	align-self: flex-start
 	display: flex
 
 section#whatIsFolding
+	display: flex
+	@include maxWidthXL
+	flex-wrap: wrap
 
-	& > div > div
-		@include maxWidthXS
+	.panelInnerLimit
+		width: 100%
+
+		& > div
+			@include maxWidthS
+
+		p
+			@include maxWidthS
 		
-	& > div > p
-		@include maxWidthXS
-		margin-top: 30%
-	
 	#foldUnfoldSliderContainer
-		background: red
 		overflow: hidden
-		height: 100vh
-		width: 60%
 		display: flex
 		justify-content: space-between
 		align-items: center
 
-		#foldedContainer
-			width: 40%
-			height: 40%
-			max-height: 400px
-			background: green
+		// #foldedContainer
+		// 	// width: 40%
+		// 	width: 350px
+		// 	// height: 40%
+		// 	height: 500px
+		// 	background: rgba(19,241,223, .8)
 
 		#unfoldedContainer
-			height: calc(100% + 400px)
-			background: blue
+			width: 100%
+			height: 350px
+			// background: blue
+			display: flex
+			flex-direction: row
+			justify-content: center
 			overflow: hidden
 
 			& > div
-				max-height: calc(100% - 400px)
-				display: grid  
+				// max-height: calc(100% - 400px)
+				// margin-bottom: 400px
+				display: flex
 
 				.unfoldedProtein
-					width: 100%
+					width: 200px
 					height: 200px
-					border: teal solid 6px
+					margin-left: 20px
 					background: lightblue
 
 section#whyDoesFoldingMatter
-	display: flex
-	align-items: flex-end
-	flex-direction: column
-
-	& > div
-		@include maxWidthS
+	align-items: flex-start
 
 section#whyDoWeNeed
 	position: relative
@@ -412,12 +460,16 @@ section#whyDoWeNeed
 		color: var(--color-dark)
 
 	& > div
-		@include maxWidthL
-		display: flex
-		justify-content: space-between
 
 		& > div
-			@include maxWidthXS
+			@include maxWidthM
+			display: flex
+			column-gap: 1.5rem
+			flex-wrap: wrap
+
+			h2, div
+				width: 48%
+				min-width: 300px
 
 	h1#aminoNumbers
 		position: absolute
@@ -458,6 +510,17 @@ section#numberOfUsersPanel
 		transform: scale(1.1)
 		right: .4%
 
+section#chartOfUsers
+	width: 100%
+	height: 100%
+
+	svg#barGraph
+		width: 600px
+		height: 600px
+
+.bar
+	fill: red
+
 section#helpingReduceCosts
 	
 	& > div
@@ -472,7 +535,7 @@ section#helpingReduceCosts
 
 section#howCanYouHelp
 	display: block !important
-	@include maxWidthXL
+	@include maxWidthL
 
 	#helpHeadingContainer
 		display: flex
@@ -497,6 +560,25 @@ section#howCanYouHelp
 
 // Above 480px but beneath 769px
 @media only screen and (min-width: 480px)
+
+	section#whatIsFolding
+		
+		.panelInnerLimit
+
+			& > div, & > p
+				@include maxWidthS
+
+	nav
+		display: flex
+
+	section#whyDoesFoldingMatter
+		display: flex
+		align-items: flex-end
+		flex-direction: column
+		justify-content: center
+
+		& > div
+			@include maxWidthS
 
 	section#helpingReduceCosts
 		
